src/objects/AstrumPM2__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Holds settings for Astrum PM application</description>
    <fields>
        <fullName>Designer_Filter__c</fullName>
        <label>Designer Filter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Engineer_Filter__c</fullName>
        <label>Engineer Filter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Install_Filter__c</fullName>
        <label>Install Filter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Office_Filter__c</fullName>
        <label>Office Filter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Lead_Filter__c</fullName>
        <label>Project Lead Filter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SOStatus_Filter__c</fullName>
        <label>SOStatus Filter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>State_Filter__c</fullName>
        <label>State Filter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status_Filter__c</fullName>
        <label>Status Filter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Surveyor_Filter__c</fullName>
        <label>Surveyor Filter</label>
        <type>TextArea</type>
    </fields>
    <label>Astrum PM 2.0 Settings</label>
</CustomObject>